<resources>
    <string name="app_name">altan-HabitTracker</string>
    <string name="done">Done</string>
    <string name="days">Days</string>
    <string name="enter_your_habit">Enter your habit</string>
    <string name="Monday">Monday</string>
    <string name="add_habit">Add Habit</string>
    <string name="habit_description">Habit Description</string>
    <string name="tuesday">Tuesday</string>
    <string name="friday">Friday</string>
    <string name="wednesday">Wednesday</string>
    <string name="saturday">Saturday</string>
    <string name="thursday">Thursday</string>
    <string name="monday">Monday</string>
    <string name="sunday">Sunday</string>
</resources>
